# mcp-airflow-api

./: .env.example  .gitignore  .mcp-config.json.pypi.swp  Dockerfile  Dockerfile.MCP-Server  Dockerfile.MCPO-Proxy  Dockerfile.OpenWebUI-MCPO-Proxy  Dockerfile.for-OpenWebUI  Dockerfile.smithery.ai  README.md  README.new.md  _config.yml  api_coverage_analysis.md  build-mcp-server-docker-image.sh  build-mcpo-server-docker-image.sh  config.template  convert_to_async.py  docker-compose.yml  fix_double_await.py  glama.json  main.py  mcp-config.json  mcp-config.json.http  mcp-config.json.local  mcp-config.json.pypi  mcp-config.json.stdio  pyproject.toml  run-mcp-inspector-local.sh  run-mcp-inspector-pypi.sh  run-mcp-inspector.sh  smithery.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  pypi-publish.yml
_includes/: google-analytics.html
docs/: example-queries.md
scripts/: mcp-server-docker-cmd.sh  mcpo-proxy-docker-cmd.sh  run-mcp-inspector-local.sh
src/mcp_airflow_api/: airflow_api.py  airflow_api_backup.py  functions.py  prompt_template.md
src/mcp_airflow_api/tools/: v1_tools.py  v2_tools.py  v2_tools_broken.py
tests/: __init__.py  config.py  test_prompt_template.py  utils.py
